# esp32-project

./: sdkconfig  sdkconfig.old
main/: CMakeLists.txt  DHT22.c  http_server.c  http_server.h  main.c  rgb_led.c  rgb_led.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_resset_button.c
main/webpage/: app.css  app.js  index.html
